Fix blurry text on scale

--- a/src/css/Character.css
+++ b/src/css/Character.css
@@ -5,6 +5,9 @@
   transition: transform 0.2s ease-in-out;
   font-weight: 500;
   max-width: 200px;
+  backface-visibility: hidden;
+  transform: translateZ(0);
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .character > .character-image {
@@ -18,5 +21,5 @@
 }
 
 .character:hover {
-  transform: scale(1.05);
+  transform: scale(1.08);
 }
